<resources>

    <!-- Login layout -->
    <string name="app_name" translatable="false">Cosas de Unicor</string>
    <string name="sign_in">Login into your account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="logo_content_description">App logo</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login">Login</string>
    <string name="alternative_login">Or sign in with</string>
    <string name="google" translatable="false">Google</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="register_here">Register here</string>

    <string name="global_chat">General Chat</string>

    <!-- Login error messages -->
    <string name="blank_email_error">Email can\'t be blank</string>
    <string name="invalid_email_error">Email is not valid</string>
    <string name="account_not_verified">The account is not verified. Please verify your email.</string>
    <string name="user_not_exist">There is no user with that email.</string>
    <string name="user_already_registered">There is already a registered user with that email address.</string>

    <string name="accept">Accept</string>
    <string name="error" translatable="false">Error</string>
    <string name="retry">Retry</string>
    <string name="cancel">Cancel</string>

    <string name="auth_success">Auth successful</string>

    <string name="unsuportedApiException">It seems you don\'t have Google Play services installed or updated. You can\'t log in with Google if this service is missing.</string>
    <string name="unknownException">An unknown error has occurred. Please try again later and contact developers: %s</string>

    <string name="network_error">Network error, try again</string>

    <!-- Register layout -->
    <string name="register">Register</string>
    <string name="create_account">Create account</string>
    <string name="name">Name</string>
    <string name="repeat_password">Repeat password</string>
    <string name="accept_terms">I accept the &#32;</string>
    <string name="terms">terms</string>
    <string name="and">&#32; and &#32;</string>
    <string name="conditions">conditions</string>

    <string name="succesfully_registered">Successfully registered. An email verification was send to your email.</string>
    <string name="important">Important</string>
    <string name="understood">Understood</string>

    <!-- Reset password layout -->
    <string name="reset_password">Reset password</string>
    <string name="reset_password_explanation">Write your email to reset your password</string>
    <string name="reset_password_explanation_2">To the email through which you created the account, you will receive an email with instructions to change your account password.</string>
    <string name="cont">Continue</string>
    <string name="error_sending_email">Error sending email</string>
    <string name="email_sent_success">Email sent successfully</string>
    <string name="email_sent">An email has been sent to %s with instructions to reset the password.</string>

    <!-- Use cases error messages -->
    <string name="name_blank">The name cannot be empty</string>
    <string name="name_too_short">The name is too short</string>
    <string name="password_blank">The password can\'t be empty</string>
    <string name="password_too_short">Password must be at least 6 characters long.</string>
    <string name="invalid_password">The password must begin with a capital letter, have at least one number and one special character.</string>
    <string name="passwords_do_not_match">Passwords don\'t match</string>
    <string name="terms_not_accepted">You must accept the terms and conditions to register</string>

    <!-- Permissions -->
    <string name="permission_required">Permission required</string>
    <string name="OK">OK</string>
    <string name="permission_denied">Permission denied</string>
    <string name="grant_permission">Grant permission</string>
    <string name="write_external_storage_permission_rationale">To ensure that Cosas de Unicor functions correctly, we require permission to write to your device\'s external storage. This allows us to save and manage files, such as photos, documents, and data backups, on your device.</string>
    <string name="write_external_storage_permission_permanently_denied">Write external storage permission permanently denied. Please go to settings and enable it.</string>
    <string name="read_external_storage_permission_rationale">To ensure that Cosas de Unicor functions correctly, we require permission to read your device\'s external storage. This allows us to read files, such as photos, documents, and data backups, on your device.</string>
    <string name="read_external_storage_permission_permanently_denied">Read external storage permission permanently denied. Please go to settings and enable it.</string>

    <!-- Notifications -->
    <string name="replied_text">%s replied</string>

</resources>