<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".resetpassword.ResetPasswordFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <FrameLayout
                android:id="@+id/headerWrapper"
                android:layout_width="match_parent"
                android:layout_height="280dp"
                android:background="#000"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="matrix"
                    android:src="@drawable/header_bg"
                    android:contentDescription="@string/app_name"
                    />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.google.android.material.appbar.AppBarLayout
                        android:id="@+id/topAppBarLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <com.google.android.material.appbar.MaterialToolbar
                            android:id="@+id/topAppBar"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:navigationIcon="@drawable/ic_arrow_left"
                            app:navigationIconTint="@color/white"
                            app:title="" />
                    </com.google.android.material.appbar.AppBarLayout>


                    <TextView
                        android:id="@+id/registerText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:text="@string/reset_password"
                        android:textColor="@color/white"
                        android:textSize="32sp"
                        app:layout_constraintBottom_toTopOf="@id/forgotPasswordExplanationText"
                        app:layout_constraintLeft_toLeftOf="parent" />

                    <TextView
                        android:id="@+id/forgotPasswordExplanationText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:paddingBottom="10dp"
                        android:text="@string/reset_password_explanation"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </FrameLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailFieldLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="20dp"
                app:boxStrokeColor="@color/md_theme_light_primary"
                app:hintTextColor="@color/md_theme_light_primary"
                app:layout_constraintTop_toBottomOf="@+id/headerWrapper">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/ic_email"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:id="@+id/secureLoginIlustration"
                android:layout_width="258dp"
                android:layout_height="180dp"
                android:src="@drawable/secure_login_ilustration"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/emailFieldLayout"
                android:layout_marginTop="10dp"
                android:contentDescription="" />

            <TextView
                android:id="@+id/forgotPasswordExplanationText2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/secureLoginIlustration"
                android:layout_marginTop="10dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:textAlignment="center"
                android:layout_marginHorizontal="16dp"
                android:text="@string/reset_password_explanation_2"
                />

            <Button
                android:id="@+id/continueButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/forgotPasswordExplanationText2"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="10dp"
                android:text="@string/cont"
                app:cornerRadius="10dp"
                android:backgroundTint="@color/md_theme_light_primary"
                android:textSize="17sp"
                android:paddingVertical="12dp"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <FrameLayout
        android:id="@+id/loadingLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#C1000000"
        tools:visibility="gone"
        >

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            />

    </FrameLayout>
</FrameLayout>